--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -32,22 +32,11 @@
     .cd-overlay {
         display: none;
     }
-    .navbar-collapse.collapse { display: block!important; }
+    .navbar-collapse.collapse { display: flex!important; }
 }
 
 @media only screen and (max-width: 767px) {
-	.search_icon { position: absolute; right: 0; bottom: 0; background: none; border: none; padding: 5px; color: #fff; }
-	.search_input { background: none; box-shadow: none; border-width: 0 0 1px 0; padding: 6px 24px 6px 0; color: #fff; border-color: #fff; border-radius: 0; }
-	.search_input::-webkit-input-placeholder { color: #fff; }
-	.search_input::-moz-placeholder { color: #fff; }
-	.search_input:-ms-input-placeholder { color: #fff; }
-	.search_input:-moz-placeholder { color: #fff;}
-	.right_menu_search form { position: relative; }
-	.right_menu_search { padding: 15px; }
-	.right_menu_addr i.fa { color: #990100; }
-	.right_menu_addr { padding: 0 15px 15px; }
-	.right_menu_addr span + span { padding-left: 0; border: none; }
-	.right_menu_addr span { display: block; margin-right: 0; margin-bottom: 10px; }
+    .navbar-collapse.collapse {display: none!important;}
 	.item_badge { width: 90px!important; height: 90px!important; } 
 	.badge_btext { font-size: 28px; }
 	.badge_stext { font-size: 18px; margin-top: -5px; }
@@ -58,7 +47,7 @@
     .carousel .container { padding-bottom: 50px!important; }
 	.carousel-caption { padding-top: 40px!important; right: 0; left: 0; }
     .navbar-brand { height: auto; }
-    .navbar { padding: 0; border: none; }
+    .navbar { padding: 0; border: none; margin: 10px 0 0; }
     #photo_gallery>div>div { width: 50%; float: left; }
     #photo_gallery>div>div:nth-child(2n+1) { clear: both; }
     #photo_gallery img { width: 100%; height: auto; }
@@ -121,6 +110,19 @@
 }
  
 @media only screen and (max-width: 992px) {
+	.right_menu_addr i.fa { color: #990100; }
+	.right_menu_addr { padding: 0 15px 15px; }
+	.right_menu_addr span + span { padding-left: 0; border: none; }
+	.right_menu_addr span { display: block; margin-right: 0; margin-bottom: 10px; }
+    .navbar-brand{margin-top: 8px;}
+	.search_icon { position: absolute; right: 0; bottom: 0; background: none; border: none; padding: 5px; color: #fff; }
+	.search_input { background: none; box-shadow: none; border-width: 0 0 1px 0; padding: 6px 24px 6px 0; color: #fff; border-color: #fff; border-radius: 0; }
+	.search_input::-webkit-input-placeholder { color: #fff; }
+	.search_input::-moz-placeholder { color: #fff; }
+	.search_input:-ms-input-placeholder { color: #fff; }
+	.search_input:-moz-placeholder { color: #fff;}
+	.right_menu_search form { position: relative; }
+	.right_menu_search { padding: 15px; }
     #googleMap { margin-bottom: 0; height: 300px; }
     .footer_pos { top: 20px; position: relative; padding-bottom: 20px; }
     #footer .footer_border { border: none; padding-left: 0; }
